@@ -1,3 +1,8 @@
+2001-12-07  Alexander Larsson  <alla@lysator.liu.se>
+
+	* src/interface.c:
+	Make window and upper part of system view not shrinkable.
+
 2001-12-03  Kevin Vandersloot <kfv101@psu.edu>
 
 	* prettytable.c: unref the tmp_pixbuf to plug leak
